Fix wrong spacing from #35

--- a/sass/global/index.scss
+++ b/sass/global/index.scss
@@ -124,7 +124,7 @@ img.max-w-40 {max-width: 40%;
         margin-bottom: 0.5em;
     }
 
-    .markdown-styling p {
+    p {
         margin-bottom: 1em;
     }
 
